--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -65,7 +65,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   end
 
   # provisioning script
-  provisioning_file = 'vagrant/bootstrap.sh'
+  provisioning_file = 'wp-vagrant/bootstrap.sh'
   if ( File.file?(provisioning_file) )
     config.vm.provision "shell" do |s|
             s.path = provisioning_file
